--- a/Frontend/panelcasilleros.html
+++ b/Frontend/panelcasilleros.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mapa Interactivo de Casilleros</title>
-  <link rel="stylesheet" href="Frontend/styleAdmin.css">
+  <link rel="stylesheet" href="Frontend/stylecasillero.css">
 </head>
 <body>
   <h1>Mapa Interactivo de Casilleros</h1>
