--- a/Frontend/inicioSesion_usuario.html
+++ b/Frontend/inicioSesion_usuario.html
@@ -32,7 +32,7 @@
     <!-- Contenedor de inicio de sesión -->
     <div class="login-page" class="login-container">
         <h2>Iniciar Sesión</h2>
-        <form action="dashboard.html" method="POST">
+        <form id="registroForm">
             <div class="login-input-group">
                 <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="Usuario">
                 <input type="text" placeholder="Usuario@soy.sena.edu.co" required>
