--- a/Frontend/login/inicioSesion_usuario.html
+++ b/Frontend/login/inicioSesion_usuario.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión - Lock&Go</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/Frontend/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -16,16 +16,16 @@
     <!-- Barra de navegación -->
     <nav class="navbar">
         <div class="logo">
-            <img src="imagenes/image-removebg-preview.png" alt="Lock&Go">
+            <img src="/Frontend/Imagenes/image-removebg-preview.png" alt="Lock&Go">
             <span class="logo-text">Lock&Go</span>
         </div>
         <ul class="menu">
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="#">Casilleros</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="/Frontend/Pagina index/index.html">Inicio</a></li>
+            <li><a href="/Frontend/Pagina Reserva/bienvenida.html">Casilleros</a></li>
+            <li><a href="/Frontend/contact/contactenos">Contacto</a></li>
         </ul>
         <div class="user-icon"> 
-            <a href="inicioSesion_usuario.html"><img src="imagenes/perfil.png" alt="Perfil"></a>
+            <a href="inicioSesion_usuario.html"><img src="/Frontend/Imagenes/perfil.png" alt="Perfil"></a>
         </div>
     </nav>
 
@@ -43,7 +43,7 @@
             </div>
             <button type="submit" class="login-btn">Ingresar</button>
         </form>
-        <p>¿No tienes cuenta? <a href="registrousuario.html">Regístrate</a></p>
+        <p>¿No tienes cuenta? <a href="/Frontend/Register/registrousuario.html">Regístrate</a></p>
     </div>
 
     <!-- Pie de página -->
@@ -57,13 +57,13 @@
 
         <div class="social-icons">
             <a href="https://www.facebook.com/SENADistritoCapital/" target="_blank">
-                <img src="/Imagenes/face_logo.png" alt="Facebook">
+                <img src="/Frontend/Imagenes/face_logo.png" alt="Facebook">
             </a>
             <a href="https://x.com/SENAComunica" target="_blank">
-                <img src="/Imagenes/tw_logo.png" alt="Twitter">
+                <img src="/Frontend/Imagenes/tw_logo.png" alt="Twitter">
             </a>
             <a href="https://www.instagram.com/senacomunica/" target="_blank">
-                <img src="/Imagenes/insta_logo.png" alt="Instagram">
+                <img src="/Frontend/Imagenes/insta_logo.png" alt="Instagram">
             </a>
         </div>
 
