--- a/Frontend/login/iniciosession_admin.html
+++ b/Frontend/login/iniciosession_admin.html
@@ -3,51 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lock&Go - Inicio</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Iniciar Sesión - Lock&Go</title>
+    <link rel="stylesheet" href="/Frontend/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="/Imagenes/image-removebg-preview.png">
-
 </head>
 <body>
+
+
+    <!-- Barra de navegación -->
     <nav class="navbar">
         <div class="logo">
-            <img src="imagenes/image-removebg-preview.png" alt="Lock&Go">
+            <img src="/Frontend/Imagenes/image-removebg-preview.png" alt="Lock&Go">
             <span class="logo-text">Lock&Go</span>
         </div>
         <ul class="menu">
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="#">Casilleros</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="/Frontend/Pagina index/index.html">Inicio</a></li>
+            <li><a href="/Frontend/Pagina Reserva/bienvenida.html">Casilleros</a></li>
+            <li><a href="/Frontend/contact/contactenos">Contacto</a></li>
         </ul>
         <div class="user-icon"> 
             <a href="inicioSesion_usuario.html"><img src="imagenes/perfil.png" alt="Perfil"></a>
         </div>
     </nav>
-    <header class="hero">
-        <h1>Reserva tu casillero fácilmente</h1>
-        <p>Accede a un espacio seguro para guardar tus pertenencias en el SENA.</p>
-        <a href="inicioSesion_usuario.html" class="btn">Empezar</a>
-    </header>
-    <section class="features">
-        <div class="feature">
-            <img src="/Imagenes/security.png" alt="Seguridad">
-            <h2>Seguridad</h2>
-            <p>Tus pertenencias estarán protegidas en todo momento.</p>
-        </div>
-        <div class="feature">
-            <img src="/Imagenes/accesibility.png" alt="Accesibilidad">
-            <h2>Accesibilidad</h2>
-            <p>Reserva y administra tu casillero desde cualquier dispositivo.</p>
-        </div>
-        <div class="feature">
-            <img src="/Imagenes/check.png" alt="Facilidad de uso">
-            <h2>Facilidad</h2>
-            <p>Proceso rápido y sencillo para obtener tu casillero.</p>
-        </div>
-    </section>
 
     <!-- Pie de página -->
     <footer>
@@ -57,19 +37,22 @@
         <p>Línea de atención al ciudadano: Bogotá +(57) 601 7366060 - Línea gratuita: 018000 910270</p>
         <p>Contacto: <a href="mailto:servicioalciudadano@sena.edu.co">servicioalciudadano@sena.edu.co</a></p>
 
+
         <div class="social-icons">
             <a href="https://www.facebook.com/SENADistritoCapital/" target="_blank">
-                <img src="/Imagenes/face_logo.png" alt="Facebook">
+                <img src="/Frontend/Imagenes/face_logo.png" alt="Facebook">
             </a>
             <a href="https://x.com/SENAComunica" target="_blank">
-                <img src="/Imagenes/tw_logo.png" alt="Twitter">
+                <img src="/Frontend/Imagenes/tw_logo.png" alt="Twitter">
             </a>
             <a href="https://www.instagram.com/senacomunica/" target="_blank">
-                <img src="/Imagenes/insta_logo.png" alt="Instagram">
+                <img src="/Frontend/Imagenes/insta_logo.png" alt="Instagram">
             </a>
         </div>
 
         <p><a href="#">Aviso de privacidad</a></p>
     </footer>
+
+
 </body>
 </html>
