--- a/Pagina Reserva/bienvenida.html
+++ b/Pagina Reserva/bienvenida.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lock&Go - Reserva de Casilleros</title>
-    <link rel="stylesheet" href="/Frontend/styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <nav class="navbar">
         <div class="logo">
-            <img src="/Frontend/Imagenes/image-removebg-preview.png" alt="Lock&Go">
+            <img src="/Imagenes/image-removebg-preview.png" alt="Lock&Go">
             <span class="logo-text">Lock&Go</span>
         </div>
         <ul class="menu">
-            <li><a href="/Frontend/Pagina index/index.html">Inicio</a></li>
-            <li><a href="/Frontend/Pagina Reserva/bienvenida.html">Casilleros</a></li>
-            <li><a href="/Frontend/contact/contactenos">Contacto</a></li>
+            <li><a href="/Pagina index/index.html">Inicio</a></li>
+            <li><a href="/Pagina Reserva/bienvenida.html">Casilleros</a></li>
+            <li><a href="/contact/contactenos">Contacto</a></li>
         </ul>
         <div class="user-icon"> 
-            <a href="inicioSesion_usuario.html"><img src="imagenes/perfil.png" alt="Perfil"></a>
+            <a href="inicioSesion_usuario.html"><img src="/imagenes/perfil.png" alt="Perfil"></a>
         </div>
     </nav>
     <section class="tittle-welcome">
@@ -61,13 +61,13 @@
 
         <div class="social-icons">
             <a href="https://www.facebook.com/SENADistritoCapital/" target="_blank">
-                <img src="/Frontend/Imagenes/face_logo.png" alt="Facebook">
+                <img src="/Imagenes/face_logo.png" alt="Facebook">
             </a>
             <a href="https://x.com/SENAComunica" target="_blank">
-                <img src="/Frontend/Imagenes/tw_logo.png" alt="Twitter">
+                <img src="/Imagenes/tw_logo.png" alt="Twitter">
             </a>
             <a href="https://www.instagram.com/senacomunica/" target="_blank">
-                <img src="/Frontend/Imagenes/insta_logo.png" alt="Instagram">
+                <img src="/Imagenes/insta_logo.png" alt="Instagram">
             </a>
         </div>
 
