--- a/Register/registro_admin.html
+++ b/Register/registro_admin.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de Usuario - Lock&Go</title>
-    <link rel="stylesheet" href="/Frontend/styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="/Imagenes/image-removebg-preview.png">
 </head>
 <body class="body_register">
+
     <!-- Barra de navegación -->
     <nav class="navbar">
         <div class="logo">
-            <img src="/Frontend/Imagenes/image-removebg-preview.png" alt="Lock&Go">
+            <img src="/Imagenes/image-removebg-preview.png" alt="Lock&Go">
             <span class="logo-text">Lock&Go</span>
         </div>
         <ul class="menu">
-            <li><a href="/Frontend/Pagina index/index.html">Inicio</a></li>
-            <li><a href="/Frontend/Pagina Reserva/bienvenida.html">Casilleros</a></li>
-            <li><a href="/Frontend/contact/contactenos">Contacto</a></li>
+            <li><a href="/Pagina index/index.html">Inicio</a></li>
+            <li><a href="/Pagina Reserva/bienvenida.html">Casilleros</a></li>
+            <li><a href="/contact/contactenos">Contacto</a></li>
         </ul>
         <div class="user-icon"> 
             <a href="inicioSesion_usuario.html"><img src="imagenes/perfil.png" alt="Perfil"></a>
@@ -89,13 +90,13 @@
 
         <div class="social-icons">
             <a href="https://www.facebook.com/SENADistritoCapital/" target="_blank">
-                <img src="/Frontend/Imagenes/face_logo.png" alt="Facebook">
+                <img src="/Imagenes/face_logo.png" alt="Facebook">
             </a>
             <a href="https://x.com/SENAComunica" target="_blank">
-                <img src="/Frontend/Imagenes/tw_logo.png" alt="Twitter">
+                <img src="/Imagenes/tw_logo.png" alt="Twitter">
             </a>
             <a href="https://www.instagram.com/senacomunica/" target="_blank">
-                <img src="/Frontend/Imagenes/insta_logo.png" alt="Instagram">
+                <img src="/Imagenes/insta_logo.png" alt="Instagram">
             </a>
         </div>
 
