--- a/Pagina Reserva/bienvenida.html
+++ b/Pagina Reserva/bienvenida.html
@@ -15,7 +15,7 @@
         <ul class="menu">
             <li><a href="/Pagina index/index.html">Inicio</a></li>
             <li><a href="/Pagina Reserva/bienvenida.html">Casilleros</a></li>
-            <li><a href="/contact/contactenos">Contacto</a></li>
+            <li><a href="/contactenos/contacto.html">Contacto</a></li>
         </ul>
         <div class="user-icon"> 
             <a href="inicioSesion_usuario.html"><img src="/imagenes/perfil.png" alt="Perfil"></a>
@@ -49,9 +49,9 @@
             <button id="cerrarButton">Cerrar</button>
         </div>
     </div>
-
-    
-    
+    <div class="gift">
+    <img src="/Imagenes/gitmapa.gif" alt="planos" class="mapa1">
+    </div>
     <footer>
         <p>&copy; Servicio Nacional de Aprendizaje SENA - Centro para la Industria de la Comunicación Gráfica (CENIGRAF) - Regional Distrito Capital.</p>
         <p>Dirección: Cra. 32 #15 - 80 – Teléfonos: 546 1500 o 596 0100 Ext.: 15 463</p>
@@ -70,8 +70,7 @@
                 <img src="/Imagenes/insta_logo.png" alt="Instagram">
             </a>
         </div>
-
-        <p><a href="#">Aviso de privacidad</a></p>
+        <p><a href="/Contactenos/privacidad.html">Aviso de privacidad</a></p>
     </footer>
 
     <script src="bienvenida.js"></script>
