--- a/Pagina index/index.html
+++ b/Pagina index/index.html
@@ -20,7 +20,7 @@
         <ul class="menu">
             <li><a href="/Pagina index/index.html">Inicio</a></li>
             <li><a href="/Pagina Reserva/bienvenida.html">Casilleros</a></li>
-            <li><a href="/contact/contactenos">Contacto</a></li>
+            <li><a href="/contactenos/contacto.html">Contacto</a></li>
         </ul>
         <div class="user-icon"> 
             <a href="/login/inicioSesion_usuario.html"><img src="/Imagenes/perfil.png" alt="Perfil"></a>
@@ -69,7 +69,7 @@
             </a>
         </div>
 
-        <p><a href="#">Aviso de privacidad</a></p>
+        <p><a href="/Contactenos/privacidad.html">Aviso de privacidad</a></p>
     </footer>
 </body>
 </html>
