--- a/login/inicioSesion_usuario.html
+++ b/login/inicioSesion_usuario.html
@@ -22,7 +22,7 @@
         <ul class="menu">
             <li><a href="/Pagina index/index.html">Inicio</a></li>
             <li><a href="/Pagina Reserva/bienvenida.html">Casilleros</a></li>
-            <li><a href="/contact/contactenos">Contacto</a></li>
+            <li><a href="/contactenos/contacto.html">Contacto</a></li>
         </ul>
         <div class="user-icon"> 
             <a href="inicioSesion_usuario.html"><img src="/Imagenes/perfil.png" alt="Perfil"></a>
@@ -66,8 +66,7 @@
                 <img src="/Imagenes/insta_logo.png" alt="Instagram">
             </a>
         </div>
-
-        <p><a href="#">Aviso de privacidad</a></p>
+        <p><a href="/Contactenos/privacidad.html">Aviso de privacidad</a></p>
     </footer>
 
 
