--- a/Pagina Reserva/bienvenida.html
+++ b/Pagina Reserva/bienvenida.html
@@ -18,7 +18,7 @@
             <li><a href="/contactenos/contacto.html">Contacto</a></li>
         </ul>
         <div class="user-icon"> 
-            <a href="inicioSesion_usuario.html"><img src="/imagenes/perfil.png" alt="Perfil"></a>
+            <a href="/login/inicioSesion_usuario.html"><img src="/imagenes/perfil.png" alt="Perfil"></a>
         </div>
     </nav>
     <section class="tittle-welcome">
