--- a/Pagina index/index.html
+++ b/Pagina index/index.html
@@ -8,42 +8,42 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="/Imagenes/image-removebg-preview.png">
+    <link rel="icon" type="image/png" href="../Imagenes/image-removebg-preview.png">
 
 </head>
 <body>
     <nav class="navbar">
         <div class="logo">
-            <img src="/Imagenes/image-removebg-preview.png" alt="Lock&Go">
+            <img src="../Imagenes/image-removebg-preview.png" alt="Lock&Go">
             <span class="logo-text">Lock&Go</span>
         </div>
         <ul class="menu">
-            <li><a href="/Pagina index/index.html">Inicio</a></li>
-            <li><a href="/Pagina Reserva/bienvenida.html">Casilleros</a></li>
-            <li><a href="/contactenos/contacto.html">Contacto</a></li>
+            <li><a href="../Pagina index/index.html">Inicio</a></li>
+            <li><a href="../Pagina Reserva/bienvenida.html">Casilleros</a></li>
+            <li><a href="../contactenos/contacto.html">Contacto</a></li>
         </ul>
         <div class="user-icon"> 
-            <a href="/login/inicioSesion_usuario.html"><img src="/Imagenes/perfil.png" alt="Perfil"></a>
+            <a href="../login/inicioSesion_usuario.html"><img src="../Imagenes/perfil.png" alt="Perfil"></a>
         </div>
     </nav>
     <header class="hero">
         <h1>Reserva tu casillero fácilmente</h1>
         <p>Accede a un espacio seguro para guardar tus pertenencias en el SENA.</p>
-        <a href="/login/inicioSesion_usuario.html" class="btn">Empezar</a>
+        <a href="../login/inicioSesion_usuario.html" class="btn">Empezar</a>
     </header>
     <section class="features">
         <div class="feature">
-            <img src="/Imagenes/security.png" alt="Seguridad">
+            <img src="../Imagenes/security.png" alt="Seguridad">
             <h2>Seguridad</h2>
             <p>Tus pertenencias estarán protegidas en todo momento.</p>
         </div>
         <div class="feature">
-            <img src="/Imagenes/accesibility.png" alt="Accesibilidad">
+            <img src="../Imagenes/accesibility.png" alt="Accesibilidad">
             <h2>Accesibilidad</h2>
             <p>Reserva y administra tu casillero desde cualquier dispositivo.</p>
         </div>
         <div class="feature">
-            <img src="/Imagenes/check.png" alt="Facilidad de uso">
+            <img src="../Imagenes/check.png" alt="Facilidad de uso">
             <h2>Facilidad</h2>
             <p>Proceso rápido y sencillo para obtener tu casillero.</p>
         </div>
@@ -59,17 +59,17 @@
 
         <div class="social-icons">
             <a href="https://www.facebook.com/SENADistritoCapital/" target="_blank">
-                <img src="/Imagenes/face_logo.png" alt="Facebook">
+                <img src="../Imagenes/face_logo.png" alt="Facebook">
             </a>
             <a href="https://x.com/SENAComunica" target="_blank">
-                <img src="/Imagenes/tw_logo.png" alt="Twitter">
+                <img src="../Imagenes/tw_logo.png" alt="Twitter">
             </a>
             <a href="https://www.instagram.com/senacomunica/" target="_blank">
-                <img src="/Imagenes/insta_logo.png" alt="Instagram">
+                <img src="../Imagenes/insta_logo.png" alt="Instagram">
             </a>
         </div>
 
-        <p><a href="/Contactenos/privacidad.html">Aviso de privacidad</a></p>
+        <p><a href="../Contactenos/privacidad.html">Aviso de privacidad</a></p>
     </footer>
 </body>
 </html>
