--- a/Register/registro_admin.html
+++ b/Register/registro_admin.html
@@ -32,7 +32,7 @@
     <div class="register-page">
         <div class="register-container">
             <h2>Registro de Usuario</h2>
-            <form action="dashboard.html" method="POST" class="register-form">
+            <form action="registro.php" method="POST" class="register-form">
                 
                 <div class="register-input-group">
                     <input type="text" placeholder="Nombre" required>
