listado de administradores y estudiantes

--- a/admin/index_admin.html
+++ b/admin/index_admin.html
@@ -30,12 +30,13 @@
     <section>
         <div>
             <button type="menu">
-                <button class="btn bloque" data-bloque="A">TABLA USUARIOS</button>
-                <button class="btn bloque" data-bloque="B">TABLA ADMINISTRADORES</button>
-                <button class="btn bloque" data-bloque="C">TABLA CASILLEROS</button>
-                <button class="btn bloque" data-bloque="D">TABLA RESERVAS</button>
+                <button class="btn bloque" onclick="location.href='../estudiante/tabla_estudiantes.php'">TABLA USUARIOS</button>
+                <button class="btn bloque" onclick="location.href='tabla_admin.php'">TABLA ADMINISTRADORES</button>
+                <button class="btn bloque" onclick="location.href='casilleros.html'">TABLA CASILLEROS</button>
+                <button class="btn bloque" onclick="location.href='reservas.html'">TABLA RESERVAS</button>
             </button>
         </div>
+        
     </section>
 
         <!-- Pie de página -->
