--- a/admin/index_admin.html
+++ b/admin/index_admin.html
@@ -29,7 +29,6 @@
 
     <section>
         <div>
-            <button type="menu">
                 <button class="btn bloque" onclick="location.href='../estudiante/tabla_estudiantes.php'">TABLA USUARIOS</button>
                 <button class="btn bloque" onclick="location.href='tabla_admin.php'">TABLA ADMINISTRADORES</button>
                 <button class="btn bloque" onclick="location.href='casilleros.html'">TABLA CASILLEROS</button>
@@ -62,4 +61,4 @@
             <p><a href="../Contactenos/privacidad.html">Aviso de privacidad</a></p>
         </footer>
 </body>
-</html>l
+</html>
