--- a/admin/registros.html
+++ b/admin/registros.html
@@ -29,6 +29,14 @@
         </div>
     </nav>
 
+    <section>
+        <div>
+                <button class="btn bloque" onclick="location.href='RegistrarE.html'">Registrar Estudiante</button>
+                <button class="btn bloque" onclick="location.href='RegistrarA.html'">Registrar Administrador</button>
+        </div>
+        
+    </section>
+
         <!-- Pie de página -->
         <footer>
             <p>&copy; Servicio Nacional de Aprendizaje SENA - Centro para la Industria de la Comunicación Gráfica (CENIGRAF) - Regional Distrito Capital.</p>
