--- a/Pagina index/index.html
+++ b/Pagina index/index.html
@@ -19,7 +19,7 @@
         </div>
         <ul class="menu">
             <li><a href="../Pagina index/index.html">Inicio</a></li>
-            <li><a href="../Pagina Reserva/bienvenida.html">Casilleros</a></li>
+            <li><a href="../Pagina Reserva/bienvenida.php">Casilleros</a></li>
             <li><a href="../contactenos/contacto.html">Contacto</a></li>
         </ul>
         <div class="user-icon"> 
