--- a/restablecer/restablecer.html
+++ b/restablecer/restablecer.html
@@ -31,20 +31,15 @@
 
     <!-- Contenedor de inicio de sesión -->
     <div class="login-page" class="login-container">
-        <h2>Iniciar Sesión</h2>
+        <h2>Recupera tu cuenta</h2>
         <form action="login.php" method="POST">
             <div class="login-input-group">
                 <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="Usuario">
-                <input type="email" name="email" placeholder="Usuario@soy.sena.edu.co" required>
+                <input type="email" name="email" placeholder="Identificacion o correo" required>
             </div>
-            <div class="login-input-group">
-                <img src="https://cdn-icons-png.flaticon.com/512/3064/3064155.png" alt="Contraseña">
-                <input type="password" name="contraseña" placeholder="Contraseña" required>
-            </div>
-            <button type="submit" class="login-btn">Ingresar</button>
+            <button type="submit" class="login-btn">Recuperar</button>
         </form>
-        <p>¿No tienes cuenta? <a href="../Register/registrousuario.html">Regístrate</a></p>
-        <p>¿Olvidaste tu contraseña? <a href="../restablecer/restablecer.html">Aqui</a></p>
+        <p>¿Tienes cuenta? <a href="../login/inicioSesion_usuario.html">Inicio sesion</a></p>
     </div>
 
     <!-- Pie de página -->
