--- a/login/inicioSesion_usuario.html
+++ b/login/inicioSesion_usuario.html
@@ -44,7 +44,7 @@
             <button type="submit" class="login-btn">Ingresar</button>
         </form>
         <p>¿No tienes cuenta? <a href="../Register/registrousuario.html">Regístrate</a></p>
-        <p>¿Olvidaste tu contraseña? <a href="../restablecer/restablecer.html">Aqui</a></p>
+        <p>¿Olvidaste tu contraseña? <a href="../restablecer/enviar_correo.php">Aqui</a></p>
     </div>
 
     <!-- Pie de página -->
