--- a/restablecer/recuperar_contraseña.html
+++ b/restablecer/recuperar_contraseña.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar Sesión - Lock&Go</title>
+    <title>Recuperar Contraseña - Lock&Go</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,7 +11,6 @@
     <link rel="icon" type="image/png" href="../Imagenes/image-removebg-preview.png">
 </head>
 <body>
-
 
     <!-- Barra de navegación -->
     <nav class="navbar">
@@ -25,26 +24,19 @@
             <li><a href="../contactenos/contacto.html">Contacto</a></li>
         </ul>
         <div class="user-icon"> 
-            <a href="inicioSesion_usuario.html"><img src="../Imagenes/perfil.png" alt="Perfil"></a>
+            <a href="../login/inicioSesion_usuario.html"><img src="../Imagenes/perfil.png" alt="Perfil"></a>
         </div>
     </nav>
 
-    <!-- Contenedor de inicio de sesión -->
+    <!-- Contenedor de recuperación de contraseña -->
     <div class="login-page" class="login-container">
-        <h2>Iniciar Sesión</h2>
-        <form action="login.php" method="POST">
-            <div class="login-input-group">
-                <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="Usuario">
-                <input type="email" name="email" placeholder="Usuario@soy.sena.edu.co" required>
-            </div>
-            <div class="login-input-group">
-                <img src="https://cdn-icons-png.flaticon.com/512/3064/3064155.png" alt="Contraseña">
-                <input type="password" name="contraseña" placeholder="Contraseña" required>
-            </div>
-            <button type="submit" class="login-btn">Ingresar</button>
+        <h2>Recupera tu cuenta</h2>
+        <form action="enviar_correo.php" method="POST">
+            <label for="email">Ingresa tu correo:</label>
+            <input type="email" name="email" required>
+            <button type="submit">Enviar enlace</button>
         </form>
-        <p>¿No tienes cuenta? <a href="../Register/registrousuario.html">Regístrate</a></p>
-        <p>¿Olvidaste tu contraseña? <a href="../restablecer/recuperar_contraseña.html">Aqui</a></p>
+        <p>¿Tienes cuenta? <a href="../login/inicioSesion_usuario.html">Iniciar sesión</a></p>
     </div>
 
     <!-- Pie de página -->
@@ -54,7 +46,6 @@
         <p>Atención telefónica: Lunes a viernes 7:00 a.m. a 7:00 p.m. - Sábados 8:00 a.m. a 1:00 p.m.</p>
         <p>Línea de atención al ciudadano: Bogotá +(57) 601 7366060 - Línea gratuita: 018000 910270</p>
         <p>Contacto: <a href="mailto:servicioalciudadano@sena.edu.co">servicioalciudadano@sena.edu.co</a></p>
-
 
         <div class="social-icons">
             <a href="https://www.facebook.com/SENADistritoCapital/" target="_blank">
@@ -69,7 +60,6 @@
         </div>
         <p><a href="../Contactenos/privacidad.html">Aviso de privacidad</a></p>
     </footer>
-
 
 </body>
 </html>
