--- a/estudiante/index_estudiante.html
+++ b/estudiante/index_estudiante.html
@@ -24,7 +24,9 @@
         </ul>
         <div class="user-icon"> 
             <a href="../login/inicioSesion_usuario.html"><img src="../Imagenes/perfil.png" alt="Perfil"></a>
+            <a href="" class="cerrar"><img src="/Imagenes/cerrar.png" alt="Cerrar Sesion"></a>
         </div>
+
     </nav>
 </body>
 </html>
