--- a/login/inicioSesion_usuario.html
+++ b/login/inicioSesion_usuario.html
@@ -20,7 +20,7 @@
             <span class="logo-text">Lock&Go</span>
         </div>
         <ul class="menu">
-            <li><a href="../Pagina index/index.html">Inicio</a></li>
+            <li><a href="/index.html">Inicio</a></li>
             <li><a href="../Pagina Reserva/bienvenida.html">Casilleros</a></li>
             <li><a href="../contactenos/contacto.html">Contacto</a></li>
         </ul>
