--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <span class="logo-text">Lock&Go</span>
         </div>
         <ul class="menu">
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="Pagina Reserva/bienvenida.html">Casilleros</a></li>
+            <li><a href="/index.html">Inicio</a></li>
+            <li><a href="/pagina reserva/bienvenida.php">Casilleros</a></li>
             <li><a href="contactenos/contacto.html">Contacto</a></li>
         </ul>
         <div class="user-icon"> 
