--- a/admin/index_admin.html
+++ b/admin/index_admin.html
@@ -23,6 +23,9 @@
             <li><a href="registros.html">Registrar</a></li>
             <li><a href="../Pagina Reserva/bienvenida.html">Casilleros</a></li>
         </ul>
+        <div class="user-icon"> 
+            <a href="" class="cerrar"><img src="/Imagenes/cerrar.png" alt="Cerrar Sesion"></a>
+        </div>
     </nav>
 
         <!-- Pie de página -->
