--- a/admin/registros.html
+++ b/admin/registros.html
@@ -55,5 +55,6 @@
     
             <p><a href="../Contactenos/privacidad.html">Aviso de privacidad</a></p>
         </footer>
+        <script src="../autentificacion/validar_sesion.js"></script>
 </body>
 </html>
