--- a/admin/index_admin.html
+++ b/admin/index_admin.html
@@ -24,7 +24,7 @@
             <li><a href="../Pagina Reserva/bienvenida.html">Casilleros</a></li>
         </ul>
         <div class="user-icon"> 
-            <a href="" class="cerrar"><img src="/Imagenes/cerrar.png" alt="Cerrar Sesion"></a>
+            <a href="../login/logout.php" class="cerrar"><img src="/Imagenes/cerrar.png" alt="Cerrar Sesion"></a>
         </div>
     </nav>
 
@@ -50,5 +50,7 @@
     
             <p><a href="../Contactenos/privacidad.html">Aviso de privacidad</a></p>
         </footer>
+    <!-- Incluir el script de validación del token -->
+    <script src="../autentificacion/validar_sesion.js"></script>
 </body>
 </html>
