--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <ul class="menu">
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="pagina reserva/bienvenida.php">Casilleros</a></li>
+            <li><a href="login/inicioSesion_usuario.html">Casilleros</a></li>
             <li><a href="contactenos/contacto.html">Contacto</a></li>
         </ul>
         <div class="user-icon"> 
