--- a/Contactenos/contacto.html
+++ b/Contactenos/contacto.html
@@ -18,7 +18,7 @@
             <span class="logo-text">Lock&Go</span>
         </div>
         <ul class="menu">
-            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="../estudiante/index_estudiante.php">Inicio</a></li>
             <li><a href="../pagina reserva/bienvenida.php">Casilleros</a></li>
             <li><a href="../contactenos/contacto.html">Contacto</a></li>
         </ul>
