--- a/pagina reserva/bienvenida.html
+++ b/pagina reserva/bienvenida.html
@@ -81,112 +81,76 @@
     </footer>
 
     <!-- Script JavaScript para la interacción de la página -->
-    <script>
-        // Manejadores de eventos para los botones de los bloques
-        document.querySelectorAll('.btn.bloque').forEach(button => {
-            button.addEventListener('click', function () {
-                const bloque = this.getAttribute('data-bloque');
-                const cuadricula = document.getElementById('cuadricula');
-                cuadricula.innerHTML = ''; // Limpiar la cuadrícula antes de llenarla
+<script>
+    // Función para obtener casilleros ocupados desde el backend
+    async function obtenerCasillerosOcupados() {
+        try {
+            const respuesta = await fetch('obtener_casilleros.php'); // Archivo PHP que consulta la BD
+            const datos = await respuesta.json();
+            return datos.ocupados || []; // Devolver lista vacía si hay un error
+        } catch (error) {
+            console.error('Error obteniendo casilleros ocupados:', error);
+            return [];
+        }
+    }
 
-                let numeros = [];
+    // Manejador de eventos para los botones de los bloques
+    document.querySelectorAll('.btn.bloque').forEach(button => {
+        button.addEventListener('click', async function () {
+            const bloque = this.getAttribute('data-bloque');
+            const cuadricula = document.getElementById('cuadricula');
+            cuadricula.innerHTML = ''; // Limpiar la cuadrícula
 
-                // Asignamos los rangos correspondientes a cada bloque
-                if (bloque === 'A') {
-                    numeros = Array.from({ length: 120 }, (_, i) => i + 1); // De 1 a 120
-                } else if (bloque === 'B') {
-                    numeros = Array.from({ length: 149 }, (_, i) => i + 121); // 121 a 269
-                } else if (bloque === 'C') {
-                    numeros = [
-                        ...Array.from({ length: 15 }, (_, i) => i + 270), // de 270 a 284
-                        ...Array.from({ length: 7 }, (_, i) => i + 304), // de 304 a 310
-                        ...Array.from({ length: 11 }, (_, i) => i + 315), // 315 a 325
-                        ...Array.from({ length: 11 }, (_, i) => i + 330), // 330 a 340
-                    ];
-                } else if (bloque === 'D') {
-                    numeros = [
-                        ...Array.from({ length: 15 }, (_, i) => i + 285), // 285 a 299
-                        ...Array.from({ length: 75 }, (_, i) => i + 360), // 360 a 434
-                    ];
-                } else if (bloque === 'E') {
-                    numeros = Array.from({ length: 41 }, (_, i) => i + 435); // de 435 a 475
-                }
+            let numeros = [];
+            if (bloque === 'A') {
+                numeros = Array.from({ length: 120 }, (_, i) => i + 1);
+            } else if (bloque === 'B') {
+                numeros = Array.from({ length: 149 }, (_, i) => i + 121);
+            } else if (bloque === 'C') {
+                numeros = [...Array.from({ length: 15 }, (_, i) => i + 270), 
+                        ...Array.from({ length: 7 }, (_, i) => i + 304),
+                        ...Array.from({ length: 11 }, (_, i) => i + 315),
+                        ...Array.from({ length: 11 }, (_, i) => i + 330)];
+            } else if (bloque === 'D') {
+                numeros = [...Array.from({ length: 15 }, (_, i) => i + 285),
+                        ...Array.from({ length: 75 }, (_, i) => i + 360)];
+            } else if (bloque === 'E') {
+                numeros = Array.from({ length: 41 }, (_, i) => i + 435);
+            }
 
-                // Llamamos la cuadrícula con los números
-                numeros.forEach(num => {
-                    const celda = document.createElement('div');
-                    celda.classList.add('celda');
-                    celda.textContent = num;
+            const ocupados = await obtenerCasillerosOcupados(); // Obtener los ocupados de la BD
 
-                    // Agregar un evento de clic a cada casillero
+            numeros.forEach(num => {
+                const celda = document.createElement('div');
+                celda.classList.add('celda');
+                celda.textContent = num;
+
+                if (ocupados.includes(num)) {
+                    celda.classList.add('ocupado'); // Clase CSS para casilleros ocupados
+                } else {
                     celda.addEventListener('click', function () {
                         mostrarVentanaEmergente(num);
                     });
-
-                    cuadricula.appendChild(celda);
-                });
-
-                // Alternar la visibilidad de la cuadrícula usando la clase 'visible'
-                cuadricula.classList.toggle('visible');
-            });
-        });
-
-        // Función para mostrar la ventana emergente para confirmar la reserva
-        function mostrarVentanaEmergente(numCasillero) {
-            const ventana = document.getElementById('ventanaEmergente');
-            const numeroCasillero = document.getElementById('numeroCasillero');
-            numeroCasillero.textContent = numCasillero;
-
-            // Establecer el ID del casillero en el formulario
-            document.getElementById('casilleroIdInput').value = numCasillero;
-
-            // Mostrar la ventana emergente
-            ventana.style.display = 'flex';
-        }
-
-        // Función para cerrar la ventana emergente
-        function cerrarVentanaEmergente() {
-            const ventana = document.getElementById('ventanaEmergente');
-            if (ventana) {
-                ventana.style.display = 'none';
-            }
-        }
-
-        // Función para enviar la solicitud de reserva al backend
-        document.getElementById('formReservar').addEventListener('submit', function (event) {
-            event.preventDefault();
-
-            const formData = new FormData(this);
-            fetch('reservar_casillero.php', {
-                method: 'POST',
-                body: formData
-            })
-            .then(response => response.json()) // Esperamos que la respuesta sea JSON
-            .then(data => {
-                console.log(data); // Para ver qué se devuelve del servidor
-                if (data.success) {
-                    alert(data.success);
-                    actualizarCasilleroVisual(data.casillero_id);
-                    cerrarVentanaEmergente(); // Cerrar ventana después de reservar
-                } else {
-                    alert(data.error || 'Hubo un error en la reserva.');
                 }
-            })
-            .catch(error => {
-                console.error('Error en la solicitud:', error);
-                alert("Hubo un error al reservar el casillero.");
-            });
-        });
 
-        // Función para actualizar la interfaz
-        function actualizarCasilleroVisual(casillero_id) {
-            const casillero = document.querySelector(`.celda[data-id="${casillero_id}"]`);
-            if (casillero) {
-                casillero.classList.add('ocupado');
-                casillero.onclick = null;
-            }
-        }
-    </script>
+                cuadricula.appendChild(celda);
+            });
+
+            cuadricula.classList.toggle('visible');
+        });
+    });
+
+    function mostrarVentanaEmergente(numCasillero) {
+        const ventana = document.getElementById('ventanaEmergente');
+        document.getElementById('numeroCasillero').textContent = numCasillero;
+        document.getElementById('casilleroIdInput').value = numCasillero;
+        ventana.style.display = 'flex';
+    }
+
+    function cerrarVentanaEmergente() {
+        document.getElementById('ventanaEmergente').style.display = 'none';
+    }
+</script>
 </body>
 
 </html>
